--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>logo.svg">
-    <title>TodoZoid - Task Manager</title>
-  </head>
-  <body>
-    <noscript>
-      <strong style="height: 90vh; display: grid; place-content:center center; font-size:larger; font-family:Arial; padding: 30px;">We're sorry but this Web-App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>logo.svg">
+  <meta name="google-site-verification" content="9Cx6oUyT1ZJ_SiHTMi91WnN4WpTBeL0BT9d2OcQmpxM" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G8XM285T0X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-G8XM285T0X');
+  </script>
+  <title>TodoZoid - Task Manager</title>
+</head>
+
+<body>
+  <noscript>
+    <strong style="height: 90vh; display: grid; place-content:center center; font-size:larger; font-family:Arial; padding: 30px;">We're sorry but this Web-App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
